# stacker

./: AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  README.rst  TODO.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
dockerfiles/clearlinux/pytorch/: Dockerfile
dockerfiles/clearlinux/tensorflow/: Dockerfile
dockerfiles/ubuntu/pytorch/: Dockerfile
dockerfiles/ubuntu/tensorflow/: Dockerfile
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
stacker/: __init__.py  assembler.py  cli.py  dlrs.yml  parser.py  stacker.py  utils.py
stacker/configs/: dlrs.yaml
stacker/slices/: horovod.dockerfile  jupyter.slice.dockerfile  os.dockerfile  pytorch.dockerfile  tensorflow.dockerfile  tf.slice.dockerfile
stacker/specs/: dlrs.yaml
tests/: __init__.py  test_stacker.py
